
syntax ="proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcService";

package product;

service Product{
   rpc CreateNewProduct(ProductRequest) returns (ProductResponse);
   rpc GetAllProducts (google.protobuf.Empty) returns (ProductList);
}

message ProductRequest{
   string ProductName = 1;
   double Price = 2;
   string ProductCode = 3;
   google.protobuf.Timestamp StockDate = 4;
}

message ProductResponse{
   bool IsError = 1;
   int32 StatusCode = 2;
}

message ProductList{
   repeated ProductRequest Products = 1;
}